@@ -3,6 +3,7 @@ package com.openwheelracing.content.ai;
 import com.openwheelracing.content.track.survey.SurveyRouteModel;
 
 import java.util.LinkedHashSet;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -19,14 +20,23 @@ public final class AiRouteChunkWindow {
         LinkedHashSet<ChunkCoordinate> chunks = new LinkedHashSet<>();
         double length = Math.max(1.0, route.length());
         double spacing = Math.max(8.0, (AHEAD_CHUNKS + BEHIND_CHUNKS) * 16.0 / 2.0);
-        for (double distance = -BEHIND_CHUNKS * spacing; distance <= AHEAD_CHUNKS * spacing; distance += spacing) {
-            SurveyRouteModel.Point point = SurveyRouteSampler.sample(route, centerDistance + distance).position();
-            addRadius(chunks, Math.floorDiv((int) Math.floor(point.x()), 16), Math.floorDiv((int) Math.floor(point.z()), 16));
-            if (chunks.size() >= MAX_CHUNKS_PER_CAR) {
-                return Set.copyOf(chunks);
-            }
+        // Insertion order is priority order: the current entity-ticking area must never
+        // lose out to distant preview chunks when the fleet budget is under pressure.
+        addAtDistance(chunks, route, centerDistance);
+        for (double distance = spacing; distance <= AHEAD_CHUNKS * spacing; distance += spacing) {
+            addAtDistance(chunks, route, centerDistance + distance);
+            if (chunks.size() >= MAX_CHUNKS_PER_CAR) return Collections.unmodifiableSet(new LinkedHashSet<>(chunks));
         }
-        return Set.copyOf(chunks);
+        for (double distance = spacing; distance <= BEHIND_CHUNKS * spacing; distance += spacing) {
+            addAtDistance(chunks, route, centerDistance - distance);
+            if (chunks.size() >= MAX_CHUNKS_PER_CAR) return Collections.unmodifiableSet(new LinkedHashSet<>(chunks));
+        }
+        return Collections.unmodifiableSet(new LinkedHashSet<>(chunks));
+    }
+
+    private static void addAtDistance(Set<ChunkCoordinate> chunks, SurveyRouteModel route, double distance) {
+            SurveyRouteModel.Point point = SurveyRouteSampler.sample(route, distance).position();
+            addRadius(chunks, Math.floorDiv((int) Math.floor(point.x()), 16), Math.floorDiv((int) Math.floor(point.z()), 16));
     }
 
     private static void addRadius(Set<ChunkCoordinate> chunks, int centerX, int centerZ) {
